@@ -1,5 +1,14 @@
 2018-08-08  Jonathan Wakely  <jwakely@redhat.com>
 
+	Backport from mainline
+	2018-05-19  Jonathan Wakely  <jwakely@redhat.com>
+
+	* src/c++11/codecvt.cc (__codecvt_utf8_base<wchar_t>::do_in)
+	[__SIZEOF_WCHAR_T__==2 && __BYTE_ORDER__!=__ORDER_BIG_ENDIAN__]: Set
+	little_endian element in bitmask.
+	* testsuite/22_locale/codecvt/codecvt_utf8/69703.cc: Run all tests.
+	* testsuite/22_locale/codecvt/codecvt_utf8/wchar_t/1.cc: New.
+
 	PR libstdc++/66145
 	Backport from mainline
 	2018-04-10  Jonathan Wakely  <jwakely@redhat.com>
